# llama

./: .gitignore  Api.json  README.md  pyproject.toml
llama_bridge/: __main__.py  anthropic.py  cli.py  config.py  llama_claw.py  llama_gui.py  llamafetch.py  master.py  mcp_tools.py  openwebui_config.py  openwebui_gui.py  openwebui_launcher.py  providers.py  server.py  telegram_launcher.py  telegram_setup_gui.py  teligram.py  tool_management.py  tools.py  tui.py
llama_bridge/bot_docs/: AGENTS.md  EVOLUTION.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
llama_bridge/bot_docs/.backups/: MEMORY.md.20260505T134922Z.bak  MEMORY.md.20260505T135048Z.bak
llama_bridge/bot_docs/skills/agent-created/direct-short-requests/: SKILL.md
llama_bridge/bot_docs/skills/agent-created/visual-work/: SKILL.md
llama_bridge/tui/: __init__.py  tui_logs.py  tui_main.py
llama_bridge/tui/styles/: logs.tcss  main.tcss
llama_bridge/tui/widgets/: __init__.py  log_view.py  panel_header.py  status_bar.py
plugins/llama_bridge_tools_claude/: .mcp.json
plugins/llama_bridge_tools_claude/.claude-plugin/: plugin.json
plugins/llama_bridge_tools_claude/commands/: deep.md  deep_research.md  fetch.md  image-sarch.md  serp-sarch.md  web.md
plugins/llama_bridge_tools_claude/skills/llama-bridge-tools/: SKILL.md
scripts/: build_setup_exe.ps1  llama_setup.py
tests/: conftest.py  test_deep_research_master_integration.py  test_master_review.py  test_master_review_cli.py
