[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-bridge"
version = "0.1.0"
description = "Anthropic-compatible bridge CLI for multiple model providers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "claude-agent-sdk>=0.1.74",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.2",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
video = [
  "manim>=0.20.0",
]

[project.scripts]
llama = "llama_bridge.cli:main"

[tool.setuptools]
packages = ["llama_bridge"]

[tool.setuptools.package-data]
llama_bridge = ["bot_docs/*.md"]
